Update Settings “pm”

--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -6,6 +6,7 @@ todos: >-
 
     * De knoppen (een gok, over, etc...) stonden vroeger in vet, terwijl ze nu regular staan. Is dat omdat dat op mobiel aangepast is? Want op desktop geeft vet mooier, terwijl op mobiel regular het mooist is? Is een scenario met verschillende tekstgrootte tussen desktop/mobiel mogelijk? Of niet? 
     * Kan de naam naast het favicon zo geschreven worden: "naakt in bad"
+    * Kan de witruimte tussen de genres in het menu "alle columns" wat kleiner gezet worden?
   * Kan de grootte van de broodtekst op schermen rond 13" (dus van de columns in kwestie, of van de tags, of van de tekst bij over) wat 1 of 2 punten groter gezet worden? 't Is nu wat klein.
 
   * Ik heb het gevoel dat, na een klik op "een gok", logo en player verdwijnen. Kan dat?
