Update Settings “pm”

--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -11,7 +11,7 @@ todos: >-
 
   * Ik heb het gevoel dat, na een klik op "een gok", logo en player verdwijnen. Kan dat?
 
-
+  * De twee minst recente columns (Patrick Shiroishi & José Mauro), die helemaal onderaan zouden moeten staan, verschijnen niet.
 
 
   **MOBIEL**
