Update Settings “pm”

--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -13,6 +13,8 @@ todos: >-
 
   * De twee minst recente columns (Patrick Shiroishi & José Mauro), die helemaal onderaan zouden moeten staan, verschijnen niet.
 
+  * Alle columns werkt goed op mac (safari, chrome, firefox), op windows (edge) soms problemen dat columns niet laden
+
 
   **MOBIEL**
 
