* Kan de naam naast het favicon zo geschreven worden: "naakt in bad"

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "naaktInBad",
+  "name": "naakt in b ad",
   "version": "1.0.0",
   "description": "My superior Nuxt.js project",
   "author": "Maarten Lauwaert",
