Update Settings “pm”

--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -11,16 +11,12 @@ todos: >-
   * Alle columns: kan klik op een column u net iets hoger doen eindigen (nu is het exact op de bovenste lijn van de cover art, kan er een mini klein beetje witruimte boven gelaten worden?)
 
 
-
-
-
-
   **Mobiel**
 
 
   * Idem opmerking ivm waar klik op een gok, als ge lager staat in de kolom
 
-  * Op alle pagina's lijkt onderaan een horizontale lijn te staan, kan die weg?
+  * Op alle pagina's lijkt onderaan een horizontale lijn te staan, kan die weg? (geen erg als die daardoor ook weg is op desktop, maar mag ook blijven staan daar als dat makkelijker werkt voor u. Geen drama)
 
   * Alle columns: 
 
