--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -7,20 +7,10 @@ todos: >-
     * brengt een klik u niet exact naar de bovenkant van de column in kwestie (Als richtlijn: kan het u exact brengen naar de bovenkant van de cover + een mini klein beetje witruimte?)
     * verdwijnt logo NIB bij klik op een gok
 
-
-
-
-
   **Mobiel**
-
-
   * Kan artiest+release+label+jaar nog iets groter (we kunnen gerust live doen zodat ge niet te lang moet zitten mozen)
-
+-> Mssn best effe samen doen
 
   * Idem opmerking ivm waar klik op een gok, als ge lager staat in de kolom
-
-
-  * Alle columns:
-
 
 
