Update Settings “pm”

--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -2,12 +2,29 @@ todos: >-
   **Desktop**
 
 
+  * Tekst: 1,12 rem
+
   * Tags: 
 
     * geen hoofdletter laten verschijnen indien geen onderliggende tags
-    * drill 'n bass?
+    * aantal tags gedelete maar staan er nog steeds in?
+    * mini klein beetje meer witruimte tussen de zoekresultaten
   * Home: onderste horizontale lijn (onder de laagste column) mag weg
 
   * Player: klik op track titel -> naar column in kwestie (alsof het een klik op "een gok" was)
 
   * Alle columns: kruis iets lager (bovenkant uitlijnen op bovenkant cover art)
+
+
+
+
+
+
+  **Mobiel**
+
+
+  * Info ivm arties + release + genre: beetje groter
+
+  * Body tekst: puntje meer witruimte
+
+  * Menu: "een gok" lijkt niet altijd te verschijnen
