Update Settings “pm”

--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -18,8 +18,6 @@ todos: >-
 
 
 
-
-
   **Mobiel**
 
 
@@ -28,3 +26,18 @@ todos: >-
   * Body tekst: puntje meer witruimte
 
   * Menu: "een gok" lijkt niet altijd te verschijnen
+
+
+
+
+
+
+
+
+  \==========
+
+
+  **Opmerkingen Maarten**
+
+
+  * Alle columns: intersect observer in More
