--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -13,7 +13,7 @@ todos: >-
 
   * Player: klik op track titel -> naar column in kwestie (alsof het een klik op "een gok" was)
 
-  * Alle columns: kruis iets lager (bovenkant uitlijnen op bovenkant cover art)
+
 
 
 
@@ -30,6 +30,12 @@ todos: >-
 
 
 
+
+
+  **Varia**
+
+
+  * Social preview
 
 
 
