Update Settings “pm”

--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -6,13 +6,10 @@ todos: >-
 
     * geen hoofdletter laten verschijnen indien geen onderliggende tags
     * mini klein beetje meer witruimte tussen de zoekresultaten
+    * klik op "ambient" zorgt dat artikel getagd met "ambient pop" verschijnt (roger 3000), maar niet dat getagd met "ambient" (ben bondy)
   * Home: onderste horizontale lijn (onder de laagste column) mag weg
 
   * Player: klik op track titel -> naar column in kwestie (alsof het een klik op "een gok" was)
-
-
-
-
 
 
   **Mobiel**
@@ -27,16 +24,10 @@ todos: >-
   * Alle columns: meer witruimte tussen rijen
 
 
-
-
-
-
   **Varia**
 
 
   * Social preview
-
-
 
 
   \==========
