Update Settings “pm”

--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -7,6 +7,8 @@ todos: >-
     * mini klein beetje meer witruimte tussen de zoekresultaten
   * Alle columns: spatie tussen # en genre weg?
 
+  * Body: 1.6 witruimte
+
 
   **Mobiel**
 
