--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "naakt in bad",
   "version": "1.0.0",
-  "description": "My superior Nuxt.js project",
+  "description": "naakt in bad is een zondagse muziekcolumn",
   "author": "Maarten Lauwaert",
   "private": true,
   "scripts": {
