Update Settings “pm”

--- a/content/settings/pm.yml
+++ b/content/settings/pm.yml
@@ -1,4 +1,15 @@
 todos: >-
+  **Desktop**
+
+
+  * wit vlak van "Alle columns" mini klein beetje hoger maken, zodat de zwarte bovenlijn exact overeenkomt met die van de player?
+
+  * Player: als een track geladen is en ge hovert over de player, dan ziet ge de tijdcode. Die staat in een standaardfont. Kan die in hetzelfde font als de overige info bij de player (artiest - song - tijd)?
+
+
+  \-----------------------------
+
+
   **Opmerkingen Maarten**
 
 
